--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-CLOUDFLARE_ACCOUNT_ID=''
-CLOUDFLARE_R2_ACCESS_KEY_ID=''
-CLOUDFLARE_R2_SECRET_ACCESS_KEY=''
-CLOUDFLARE_R2_BUCKET_NAME=''
+VITE_ACCOUNT_ID=''
+VITE_R2_ACCESS_KEY_ID=''
+VITE_R2_SECRET_ACCESS_KEY=''
+VITE_R2_BUCKET_NAME=''
